# Mlops

./: .gitignore  Integrantes_Equipo.txt  README.md  dvc.yaml  params.yaml  pyproject.toml  train.py
.dvc/: config
mlruns/427628790093973185/: meta.yaml
mlruns/427628790093973185/4def4837483f457cb8f11633c2ea0ea3/: meta.yaml
mlruns/427628790093973185/4def4837483f457cb8f11633c2ea0ea3/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/427628790093973185/4def4837483f457cb8f11633c2ea0ea3/tags/: mlflow.log-model.history  mlflow.source.git.commit
mlruns/427628790093973185/fce3fe6458ff4ff9b74c4b7c4ef8878b/: meta.yaml
mlruns/427628790093973185/fce3fe6458ff4ff9b74c4b7c4ef8878b/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/427628790093973185/fce3fe6458ff4ff9b74c4b7c4ef8878b/tags/: mlflow.log-model.history
mlruns/585244540008148007/: meta.yaml
mlruns/585244540008148007/2764535a6f774f56b71dcae1ed23d46b/: meta.yaml
mlruns/585244540008148007/2764535a6f774f56b71dcae1ed23d46b/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/585244540008148007/2764535a6f774f56b71dcae1ed23d46b/tags/: mlflow.log-model.history
mlruns/585244540008148007/42e9782f700b40dfb3d03f7c7525fa1a/: meta.yaml
mlruns/585244540008148007/42e9782f700b40dfb3d03f7c7525fa1a/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/585244540008148007/42e9782f700b40dfb3d03f7c7525fa1a/tags/: mlflow.log-model.history  mlflow.source.git.commit
outputs/: metrics.json
src/: generate_data.py  prepare.py  train.py
tests/: test_pipeline.py
(+11 files in other folders)
